# data-ecosystem

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DATA-GOVERNANCE.md  ONBOARDING.md  PLAYBOOK.md  README.md  SETUP-GUIDE.md  pyproject.toml
.github/workflows/: stale-branches.yml  validate.yml
archive/: CLAUDE.md.legacy
archive/legacy-scripts/: enrich_corpo.py  extract_schema.py  fix_enrichment.py  ingest_report.py  query_kb.py  run_agent.py  run_full_pipeline.py  upload_to_snowflake.py
archive/python-package/: cli.py.legacy
archive/python-tests/: test_asana_auth.py  test_calendar.py  test_classifier.py  test_cli.py  test_config.py  test_gmail.py  test_google_auth.py  test_knowledge_index.py  test_knowledge_search.py  test_knowledge_store.py  test_matcher.py  test_narrative.py  test_runner.py  test_scheduler.py  (+2 more)
data/: README.md
docs/: cowork-research-prompt.md  data-dictionary-qt.md  data-dictionary.md  entity-resolution-consolidation-plan.md  insights-legacy-index.md  methodology.md  pipeline-overview.md  pipeline_overview.md  qt-operations.md  registry-build-summary-2026-04.md  registry_build_summary_2026-04.md  reports-tags.md  snowflake-schemas.md  taxonomy-qt-legacy.md
insights/: index.yaml
knowledge_base/: index.md
public-data/: README.md
skills/: branch-conventions.md  data-enrichment.md  insight-extractor.md  report-builder.md  snowflake-query.md  taxonomy-lookup.md
sql/: 0_utilities_one_time.sql
taxonomy/: geographies.yaml  labels.yaml  sectors.yaml  stages.yaml  startup-criteria.yaml
(+213 files in other folders)
